--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "angular-training0": {
+    "angular-training": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/angular-training0",
+            "outputPath": "dist/angular-training",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -62,18 +62,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "angular-training0:build"
+            "browserTarget": "angular-training:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "angular-training0:build:production"
+              "browserTarget": "angular-training:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "angular-training0:build"
+            "browserTarget": "angular-training:build"
           }
         },
         "test": {
@@ -110,15 +110,15 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "angular-training0:serve"
+            "devServerTarget": "angular-training:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "angular-training0:serve:production"
+              "devServerTarget": "angular-training:serve:production"
             }
           }
         }
       }
     }},
-  "defaultProject": "angular-training0"
+  "defaultProject": "angular-training"
 }
